# orchestra

./: .gitignore  CMakeLists.txt  README.md  mix.exs  run_BFS.sh  run_BFS_Warp.sh
benchmarks/: dot_product.ex  dot_product_double.ex  julia.ex  mm.ex  mm_2.ex  nbodies.ex  nearest_neighbor.ex  raytracer.ex
benchmarks/cooperative/bfs/: BFS-Warp.exs  BFS.exs
benchmarks/cooperative/bs/: bs.ex
benchmarks/cpu/: dot_product.exs  dot_product_nx.exs  julia.exs  mm.exs  mm_nx.exs  optimized_reduce.exs
benchmarks/gpu/: dot_product.exs  julia.exs  mm.exs
benchmarks/ske_lib/: dot_product.ex  julia.ex  nbodies.ex  raytracer.ex
benchmarks/without_skeletons/: mm.ex  nbodies.ex  raytracer.ex
c_src/: Elixir.CAS_Poly.cl  Orchestra.Atomics.cl  cldef.hpp  gpu_nifs.cpp
c_src/ocl_interface/: OCLInterface.cpp  OCLInterface.hpp
lib/: orchestra.ex  orchestra_functions.ex
lib/orchestra/: JIT.ex  application.ex  call_graph_sorter.ex  context.ex  opencl_backend.ex  ske.ex  tensor_tools.ex  type_inference.ex
local_tools/: graph_to_orchestra.py
tests/: AlignedNxes.exs  ArraySum_ocl.exs  ArraySum_test.exs  Atomics_2_GPU.exs  CPPBackendTest.exs  ContextTest.exs  KernelCaching.exs  KernelCaching_2.exs  Map_test.exs  Map_test_2.exs  SkeTest.ex  TypeInferenceTests.exs
tests/europar_examples/: array_comp.ex  dot_product.ex  map.ex
